# AgentNodes

agentnodes-editor/: .eslintrc.json  .gitignore  agentnodes-config.json  compiled_examples.json  forge.config.ts  package-lock.json  package.json  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts  webpack.rules.ts
agentnodes-editor/node-definitions/: compiled.json
agentnodes-editor/node-definitions/atomic/constants/: group.json
agentnodes-editor/src/: index.global.css  index.html  index.ts  preload.ts  renderer.ts
agentnodes-editor/src/hooks/: index.ts  useCanvasDrop.ts  useCanvasHistory.ts  useClickOutside.ts  useConfirmDialog.ts  useContextMenu.ts  useDragAndDrop.ts  useGroupManagement.ts  useKeyboardShortcuts.ts  useNodeCompilationStatus.ts  useNodeHandles.ts  useNodeManagement.ts  useSidebarData.ts  useSidebarDragHandlers.ts  useSidebarHandlers.ts  useSidebarHooks.ts  useSidebarNodeHandlers.ts  useVariableManagement.ts  useVariableNodeSync.ts
agentnodes-editor/src/services/: compilationService.ts  configurationService.ts  nodeCompilationStatus.ts  nodeFileSystem.ts  processManagerService.ts  variableStorage.ts
agentnodes-editor/src/types/: electron.d.ts  project.ts
agentnodes-editor/src/utils/: connectionUtils.ts  nodeClipboard.ts  typeColors.ts
backend/: .gitignore  1  Cargo.toml  agent_nodes.schema.json  rustfmt.toml
backend/src/: cli.rs  eval_error.rs  main.rs
backend/src/ai/: agent.rs  mod.rs  openai.rs
backend/src/eval/: eval_error.rs  evaluator.rs  execution_node.rs  mod.rs  waiters.rs
backend/src/language/: eval.rs  mod.rs  nodes.rs  typing.rs
backend/src/logging/: logger_trait.rs  mod.rs  node_state_logger.rs
backend/testprogs/: add.json  compiled.json  converse.json  get_line.json  print_complex.json  regex_test.json  socket_test.json  val_print.json  variable_test.json  while_test.json  write_get_request.json
node_monitor/: index.html  package-lock.json  package.json
node_monitor/src/: main.ts  styles.css
node_monitor/src-tauri/: Cargo.toml  tauri.conf.json
node_monitor/src-tauri/src/: lib.rs  main.rs
(+162 files in other folders)
