[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["serde", "v4", "v5"] }
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "net",
  "fs",
] }
console-subscriber = "0.5.0"
regex = "1.12.2"
clap = { version = "4.5.53", features = ["derive"] }
clap_derive = "4.5.49"
schemars = { version = "1.1.0", features = ["uuid1"] }
openai = "1.1.1"
async-trait = "0.1.89"
