[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["serde", "v4", "v5"] }
tokio = { version = "1.50.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "net",
  "fs",
] }
console-subscriber = "0.5.0"
regex = "1.12.3"
clap = { version = "4.6.0", features = ["derive"] }
clap_derive = "4.6.0"
schemars = { version = "1.2.1", features = ["uuid1"] }
openai = "1.1.1"
async-trait = "0.1.89"
ollama-rs = { version = "0.3.4", features = ["macros", "headers"] }
futures = "0.3.32"
