[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-websockets = { version = "0.13.2", features = [
  "client",
  "openssl",
  "rand",
] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "net",
  "fs",
] }
tokio-util = "0.7.18"
console-subscriber = "0.5.0"
regex = "1.12.3"
clap = { version = "4.6.0", features = ["derive"] }
clap_derive = "4.6.0"
schemars = { version = "1.2.1", features = ["uuid1"] }
openai = "1.1.1"
async-trait = "0.1.89"
ollama-rs = { version = "0.3.4", features = ["macros", "headers"] }
futures = "0.3.32"
